# pyzwoasi

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: deployment.yml
examples/: liveView.py  takePicture.py
pyzwoasi/: __init__.py  __version__.py  camera.py  pyzwoasi.py
src/: main.py
tests/: test_pyzwoasi.py  tests.py
