[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzwoasi"
version = "0.1.0-alpha.8"
description = "Python binding for the ZWO ASI SDK library"
authors = [
	{ name = "Francois Margall", email = "fr.margall@proton.me" },
]
readme = "README.md"
keywords = ["binding", "zwo", "asi", "sdk", "wrapper", "camera", "astronomy"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/fmargall/pyzwoasi.git"